Fixed opacity style on IE

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -34,6 +34,27 @@ ul {
   padding-right: 30px;
 }
 
+.carousel-indicators li {
+  background-color: #FFFFFF;
+  /* other browsers */
+  /* opacity: 0.4; */
+  /* this works in IE6, IE7, and IE8 */
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40); 
+  /* this works in IE8 only */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=40)";
+  background-color: rgba(0,0,0,0);
+
+  &.active {
+    /* other browsers */
+    /* opacity: 0.1; */
+    /* this works in IE6, IE7, and IE8 */
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100); 
+    /* this works in IE8 only */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=100)";
+    background-color: #FFFFFF;
+  }
+}
+
 .my-carousel-control {
   position: absolute;
   top: 50%;
@@ -49,6 +70,13 @@ ul {
   &:hover {
     color: white;
     text-decoration: none;
+    background-color: #FFFFFF;
+    /* other browsers */
+    /* opacity: 0.2; */
+    /* this works in IE6, IE7, and IE8 */
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); 
+    /* this works in IE8 only */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=20)";
     background: rgba(255, 255, 255, 0.2);
   }
   &.left {
@@ -82,6 +110,13 @@ ul {
       width: 100%;
       display: block;
       color: white;
+      background-color: #555555;
+      /* other browsers */
+      /* opacity: 0.5; */
+      /* this works in IE6, IE7, and IE8 */
+      filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50); 
+      /* this works in IE8 only */
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=50)";
       background: rgba(85, 85, 85, 0.5);
       line-height: 300%;
       margin: 0;
